--- a/organizer/templates/base.j2
+++ b/organizer/templates/base.j2
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <a class="navbar-brand" href="#">Trips organizer</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,13 +19,13 @@
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <a class="nav-item nav-link active" href="#">Trips</a>
-                <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Options</a>
+                <a id="trips_link" class="nav-item nav-link" href="{{ url_for('trips.index') }}">Trips</a>
+                <a id="products_link" class="nav-item nav-link" href="{{ url_for('products.index') }}">Products</a>
             </div>
 
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="search" placeholder="Fake and gay">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Do not search</button>
             </form>
         </div>
     </nav>
