--- a/organizer/templates/products/products.j2
+++ b/organizer/templates/products/products.j2
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
                         <button class="btn btn-primary" type="submit">{{buttonName}}</button>
                     </div>
                 </form>
