--- a/organizer/templates/trips/trip.j2
+++ b/organizer/templates/trips/trip.j2
@@ -108,7 +108,7 @@
                     <h5 class="card-title">Trip information</h5>
                     <p class="card-text">From: {{ trip['from_date'] }}</p>
                     <p class="card-text">Until: {{ trip['till_date'] }}</p>
-                    <a type="button" class="btn btn-primary" href="{{ url_for('trips.edit', trip_id=trip['id']) }}">Edit the trip</a>
+                    <a class="btn btn-primary" href="{{ url_for('trips.edit', trip_id=trip['id']) }}">Edit the trip</a>
                 </div>
             </div>
         </div>
