--- a/organizer/templates/trips/trip_day.html
+++ b/organizer/templates/trips/trip_day.html
@@ -1,4 +1,4 @@
-{% import 'trips/trip_table.j2' as trip_table %}
+{% import 'trips/trip_table.html' as trip_table %}
 
 {% macro day(day_info) %}
 <div class="card shadow mb-3" id="day{{day_info['number']}}">
