--- a/organizer/templates/products/products.html
+++ b/organizer/templates/products/products.html
@@ -1,4 +1,4 @@
-{% extends 'base.j2' %} {% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <div class="container">
     <h1 class="display-4 my-3">Products</h1>
