--- a/organizer/templates/products/products.html
+++ b/organizer/templates/products/products.html
@@ -128,7 +128,7 @@
                             <label for="add-proteins-input" class="col-sm-2 col-form-label">Proteins</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="proteins" id="add-proteins-input" v-model="proteins"
-                                v-bind:class="{ 'is-valid': validation.proteins, 'is-invalid': !validation.proteins || !validation.nutrition }">
+                                v-bind:class="{ 'is-valid': validation.proteins, 'is-invalid': !validation.proteins }">
                                 <div class="invalid-feedback">Please enter the correct number</div>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
                             <label for="add-fats-input" class="col-sm-2 col-form-label">Fats</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="fats" id="add-fats-input" v-model="fats"
-                                v-bind:class="{ 'is-valid': validation.fats, 'is-invalid': !validation.fats || !validation.nutrition }">
+                                v-bind:class="{ 'is-valid': validation.fats, 'is-invalid': !validation.fats }">
                                 <div class="invalid-feedback">Please enter the correct number</div>
                             </div>
                         </div>
@@ -144,14 +144,16 @@
                             <label for="add-carbs-input" class="col-sm-2 col-form-label">Carbs</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="carbs" id="add-carbs-input" v-model="carbs"
-                                v-bind:class="{ 'is-valid': validation.carbs, 'is-invalid': !validation.carbs || !validation.nutrition }">
+                                v-bind:class="{ 'is-valid': validation.carbs, 'is-invalid': !validation.carbs }">
                                 <div class="invalid-feedback">Please enter the correct number</div>
                             </div>
                         </div>
-                        <div class="form-group row" v-if="!validation.nutrition">
-                            <div class="col-sm-2 text-danger">Error</div>
-                            <div class="col-sm-10 invalid-feedback d-block">
-                                Sum of all nutritional values must not be more than 100.
+                        <div class="form-group row">
+                            <div class="col-sm-2" v-bind:class="{ 'text-info': validation.nutrition, 'text-danger': !validation.nutrition }">
+                                Note
+                            </div>
+                            <div class="col-sm-10" v-bind:class="{ 'text-info': validation.nutrition, 'text-danger font-weight-bolder': !validation.nutrition }">
+                                Sum of all nutritional values must not be more than 100
                             </div>
                         </div>
                         <div class="form-group row">
@@ -178,7 +180,10 @@
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
-                        <button class="btn btn-primary" type="submit" v-bind:disabled="!formValid">{{buttonName}}</button>
+                        <button class="btn btn-primary" type="submit"
+                                v-bind:disabled="!formValid">
+                            {{buttonName}}
+                        </button>
                     </div>
                 </form>
             </div>
