Fix for small screens in add a meal form

--- a/organizer/templates/trips/trip.html
+++ b/organizer/templates/trips/trip.html
@@ -29,7 +29,7 @@
                         <div class="input-group col-sm-10">
                             <input type="text" class="form-control w-75" v-model="currentProductName" disabled>
                             <div class="input-group-append w-25">
-                                <button tabindex="7" class="btn btn-outline-secondary w-100" type="button" v-on:click="clearProduct()">Clear product</button>
+                                <button tabindex="7" class="btn btn-outline-secondary w-100 text-truncate" type="button" v-on:click="clearProduct()">Clear product</button>
                             </div>
                         </div>
                     </div>
