Add developer mode with database utilities

--- a/organizer/templates/base.html
+++ b/organizer/templates/base.html
@@ -30,6 +30,8 @@
             <div class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <a id="trips_link" class="nav-item nav-link" href="{{ url_for('trips.index') }}">Trips</a>
                 <a id="products_link" class="nav-item nav-link" href="{{ url_for('products.index') }}">Products</a>
+                <a id="developer-console" class="nav-item nav-link" href="{{ url_for('developer.console') }}">Console</a>
+                <span class="mx-5 navbar-text text-danger">TESTING MODE. All database changes are erased every 24 hours!</span>
             </div>
         </div>
     </nav>
