--- a/organizer/templates/trips/trip.html
+++ b/organizer/templates/trips/trip.html
@@ -56,7 +56,7 @@
                         </tr>
                     </thead>
                     <tbody id="found-products">
-                        <tr v-for="product in products">
+                        <tr v-for="product in products" v-on:click="setProduct(product.id, product.name)">
                             <th scope="row">
                                 {{ product.id}}
                             </th>
@@ -205,7 +205,7 @@
                         'trip_id': "{{ trip['id'] }}",
                         'meal_name': mealName,
                         'day_number': day,
-                        'name': this.currentProductName,
+                        'product_id': this.currentProductId,
                         'mass': this.mass,
                         'unit': this.unit
                     },
