--- a/organizer/templates/products/products.html
+++ b/organizer/templates/products/products.html
@@ -127,25 +127,46 @@
                             <label for="add-name-input" class="col-sm-2 col-form-label">Name</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="name" id="add-name-input"
-                                    placeholder="enter a product name" v-model="productName"
-                                    v-bind:class="{ 'is-valid': validation.name, 'is-invalid': !validation.name }">
+                                    placeholder="Product name" v-model="productName"
+                                    v-bind:class="{ 'is-valid': validation.name, 'is-invalid': !validation.name }"
+                                    autocomplete="off">
                                 <div class="invalid-feedback">Field must not be empty</div>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="add-calories-input" class="col-sm-2 col-form-label">Calories</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="calories" id="add-calories-input"
-                                    placeholder="enter amount of calories" v-model="calories"
-                                    v-bind:class="{ 'is-valid': validation.cals, 'is-invalid': !validation.cals }">
-                                <div class="invalid-feedback">Please enter non-negative number</div>
+                                <div class="input-group">
+                                    <input type="text"
+                                           class="form-control"
+                                           name="calories"
+                                           id="add-calories-input"
+                                           placeholder="Amount of calories"
+                                           autocomplete="off"
+                                           v-model="calories"
+                                           v-bind:class="{ 'is-valid': validation.cals, 'is-invalid': !validation.cals }"
+                                           v-bind:readonly="caloriesLock">
+                                    <div class="input-group-append">
+                                        <button class="btn btn-outline-secondary"
+                                                type="button"
+                                                id="button-addon-lock"
+                                                data-toggle="button"
+                                                autocomplete="off"
+                                                aria-pressed="false"
+                                                v-on:click="lockCalories">
+                                            Lock
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="invalid-feedback d-block" v-if="!validation.cals">Please enter non-negative number</div>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="add-proteins-input" class="col-sm-2 col-form-label">Proteins</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="proteins" id="add-proteins-input" v-model="proteins"
-                                v-bind:class="{ 'is-valid': validation.proteins, 'is-invalid': !validation.proteins }">
+                                v-bind:class="{ 'is-valid': validation.proteins, 'is-invalid': !validation.proteins }"
+                                autocomplete="off">
                                 <div class="invalid-feedback">Please enter the correct number</div>
                             </div>
                         </div>
@@ -153,7 +174,8 @@
                             <label for="add-fats-input" class="col-sm-2 col-form-label">Fats</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="fats" id="add-fats-input" v-model="fats"
-                                v-bind:class="{ 'is-valid': validation.fats, 'is-invalid': !validation.fats }">
+                                v-bind:class="{ 'is-valid': validation.fats, 'is-invalid': !validation.fats }"
+                                autocomplete="off">
                                 <div class="invalid-feedback">Please enter the correct number</div>
                             </div>
                         </div>
@@ -161,7 +183,8 @@
                             <label for="add-carbs-input" class="col-sm-2 col-form-label">Carbs</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="carbs" id="add-carbs-input" v-model="carbs"
-                                v-bind:class="{ 'is-valid': validation.carbs, 'is-invalid': !validation.carbs }">
+                                v-bind:class="{ 'is-valid': validation.carbs, 'is-invalid': !validation.carbs }"
+                                autocomplete="off">
                                 <div class="invalid-feedback">Please enter the correct number</div>
                             </div>
                         </div>
@@ -190,7 +213,8 @@
                             <label for="add-gpp-input" class="col-sm-2 col-form-label">Mass</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="grams" id="add-gpp-input" v-model="grams"
-                                v-bind:class="{ 'is-valid': validation.grams, 'is-invalid': !validation.grams }">
+                                v-bind:class="{ 'is-valid': validation.grams, 'is-invalid': !validation.grams }"
+                                autocomplete="off">
                                 <div class="invalid-feedback">Please enter the number greater than 0.1</div>
                             </div>
                         </div>
