--- a/organizer/templates/reports/packing.html
+++ b/organizer/templates/reports/packing.html
@@ -2,11 +2,11 @@
 
 <div class="container">
     <div class="row d-print-none">
-        <div class="col-10">
+        <div class="col">
             <h1 class="display-4 my-3">{{ trip['name'] }}: {{ string_table['Packing report title'] }}</h1>
         </div>
-        <div class="col-2 d-flex align-items-end">
-            <div class="dropdown my-2">
+        <div class="col-auto d-flex align-items-end">
+            <div class="dropdown my-2 d-none d-md-block">
                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="columns-count-dropdown-button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {{ string_table['Packing report selector title'] }}
@@ -34,7 +34,7 @@
                     <th class="d-none d-print-table-cell">T</th>
                     <th>{{ string_table['Packing report name column title'] }}</th>
                     {% for person_group in person_groups: %}
-                    <th class="text-right">{{ person_group }}{{ string_table['Packing report persons suffix'] }}</th>
+                    <th class="text-right">{{ person_group }} {{ string_table['Packing report persons suffix'] }}</th>
                     {% endfor %}
                 </thead>
                 <tbody>
